# GaussianMixtureModels

./: CMakeLists.txt  README.md  gaussian_mixture_models.hpp  main.cpp
include/: gaussian_mixture_models.cpp
